[package]
name = "radix50-cli"
edition = "2021"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "r50"
path = "radix50-cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radix50 = "0.2.0"
docopt = "1"
serde = "1"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
