[package]
name = "radix50"
edition = "2021"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true


[lib]
path = "radix50.rs"

[dependencies]
const_for = "0.1"
